# mimic

./: .gitignore  Cargo.toml  README.md  TROUBLESHOOTING.md  win.sh  win_release.sh
assets/: ant.urdf  dmm-humanoid.urdf  humanoid.urdf  minitaur.urdf  quadruped.urdf
examples/: pyo3.rs  xurdf.rs
src/: lib.rs  main.rs  physics.rs  ppo.py  rl.rs  urdf.rs
