[package]
name = "mimic"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-inspector-egui = "0.28.0"
bevy_panorbit_camera = "0.21.2"
bevy_rapier3d = { version = "0.28.0", features = [
    "simd-stable",
    "parallel",
    "debug-render-3d",
] }
nalgebra = { version = "0.33.2", features = ["convert-glam029"] }
xurdf = { git = "https://github.com/rulerofcakes/xurdf", branch = "capsule" }

[dependencies.bevy]
version = "0.15.0"

# enable optimizations for rapier only in dev mode
[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
